# hybrid-ga-tabu-flc-flowshop-scheduling

./: compare_plan.md  data-analysis.ipynb  implementation_plan.md  main.py  pyproject.toml  smt_schedule_log.csv
blog/: SMT_Optimization_Blog_EN.md  SMT_Optimization_Blog_VI.md
data_versions/: 1-1-small.pkl  p1-1.pkl  p1-2small.pkl  p1-3-small.pkl
data_versions/raw/: problem1.mat  problem10.mat  problem100.mat  problem101.mat  problem102.mat  problem103.mat  problem104.mat  problem105.mat  problem106.mat  problem107.mat  problem108.mat  problem109.mat  problem11.mat  problem110.mat  problem111.mat  problem112.mat  problem113.mat  problem114.mat  problem115.mat  problem116.mat  problem117.mat  problem118.mat  problem119.mat  problem12.mat  problem120.mat  problem121.mat  problem122.mat  problem123.mat  problem124.mat  problem125.mat  problem126.mat  problem127.mat  problem128.mat  problem129.mat  problem13.mat  problem130.mat  problem131.mat  problem132.mat  problem133.mat  problem134.mat  (+760 more)
experiments/001_20260628_212928_problem1/: 001_20260628_212928_problem1.csv  001_20260628_212928_problem1.json
experiments/002_20260628_213831_problem1/: 002_20260628_213831_problem1.csv  002_20260628_213831_problem1.json
experiments/003_20260628_214151_problem1/: 003_20260628_214151_problem1.csv  003_20260628_214151_problem1.json
flowchart/: flowchart.drawio  ga_tabu_step_by_step.drawio  problem1_infographic.drawio  system_architecture.drawio
src/: app.py  config.py  models.py
src/ui/: sync.py  (+3 more)
tests/: test_comparisons.py  test_logger.py  test_scheduler.py  test_stats.py
(+41 files in other folders)
