[project]
name = "flc-ga-tabu-scheduling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "preprocessing>=0.1.13",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "scipy>=1.18.0",
    "spicy>=0.16.0",
    "streamlit>=1.58.0",
]
